--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.5.1",
+    "react-autosuggest": "^9.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
