--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "jest": "20.0.4",
     "mysql": "^2.16.0",
     "object-assign": "4.1.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
