--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
+    "react-scripts": "^1.1.5",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
@@ -98,5 +99,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
