--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
     "mysql": "^2.16.0",
     "object-assign": "4.1.1",
