--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-autosuggest": "^9.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.1",
+    "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
