--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "6.26.0",
+    "bcrypt": "^3.0.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "dotenv": "^4.0.0",
@@ -33,6 +34,7 @@
     "passport-local": "^1.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "promise": "8.0.1",
+    "q": "^1.5.1",
     "raf": "3.4.0",
     "react": "^16.5.1",
     "react-autosuggest": "^9.4.2",
@@ -45,6 +47,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
+    "socket.io": "^2.1.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
