--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "isomorphic-fetch": "^2.2.1",
     "ignore-styles": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
     "mysql": "^2.16.0",
     "object-assign": "4.1.1",
@@ -45,6 +45,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.1",
     "react-loadable": "^5.5.0",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-thunk": "^1.0.0",
@@ -56,8 +57,7 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "react-modal": "^3.6.1"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "dev": "SET NODE_ENV=development webpack & node server/bootstrap.js",
