--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
-    "socket.io": "^2.1.1",
+    "socket.io": "^1.4.8",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "uws": "^99.0.0",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
